--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -15,9 +15,8 @@
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="J. Golding" /></label>
-                            <a href="article.html"></a>
-                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
+                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{authors}" name="authors" placeholder="Golding, J." /></label>
+                            <a th:if="${#fields.hasErrors('authors')}" th:errors="*{authors}">authors errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Journal: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{journal}" name="journal" placeholder="Scientific Reports" /></label>
