--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -15,8 +15,8 @@
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="William Stallings" /></label>
-                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
+                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{authors}" name="authors" placeholder="Stallings, William" /></label>
+                            <a th:if="${#fields.hasErrors('authors')}" th:errors="*{authors}">authors errors</a>
                         </div>
                         <div class="form-group">
                             <label class="lbl">Publisher: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{publisher}" name="publisher" placeholder="IEEE" /></label>
