--- a/src/main/resources/templates/inpro_edit.html
+++ b/src/main/resources/templates/inpro_edit.html
@@ -11,19 +11,19 @@
                     <form method="post" th:object="${inproceeding}">
                         <h2 class="text-center"><strong>Edit</strong> an inproceeding.</h2>
                         <div class="form-group">
-                            <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Results from a Three-Year Transition to the Extreme Apprenticeship Method" /></label>
+                            <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" /></label>
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Book Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{bookTitle}" name="bookTitle" placeholder="Advanced Learning Technologies, ICALT" /></label>
+                            <label class="lbl">Book Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{bookTitle}" name="bookTitle" /></label>
                             <a th:if="${#fields.hasErrors('bookTitle')}" th:errors="*{bookTitle}">booktitle errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="Arto Vihavainen, Matti Luukkainen" /></label>
-                            <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
+                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{authors}" name="authors" /></label>
+                            <a th:if="${#fields.hasErrors('authors')}" th:errors="*{authors}">authors errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Year: <a class="requiredField">*</a><input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2013" /></label>
+                            <label class="lbl">Year: <a class="requiredField">*</a><input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" /></label>
                             <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
                         </div>
                         <div class="form-group">
