--- a/src/main/resources/templates/inpro_edit.html
+++ b/src/main/resources/templates/inpro_edit.html
@@ -66,7 +66,8 @@
                             <label class="lbl">Note:<input class="form-control" type="text" th:field="*{note}" name="note" placeholder="Additional notes" /></label>
                             <a th:if="${#fields.hasErrors('note')}" th:errors="*{note}">note errors</a>
                             <div class="form-group">
-                                <button class="btn btn-success btn-block" type="submit" name="addButton">Edit</button>
+                                <button class="btn btn-success btn-block" type="submit" name="addButton">Confirm</button>
+                                <button class="btn btn-default btn-block">Back<a th:href="@{/inpros}"></a></button>
                             </div>
                         </div>
                     </form>
