--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -69,9 +69,12 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <form th:action="@{article/{articleId}/edit(articleId=${article.id})}" method="GET">
-                                                                    <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>
-                                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                                    <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>                                                                    
                                                                 </form>
+                                                                <form th:action="@{article/{articleId}/delete(articleId=${article.id})}" th:method="DELETE">
+                                                                    <input class="btn btn-danger" type="submit" value="Delete" name='deleteButton'/>                                                                    
+                                                                </form>
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </div>
                                                         </div>
                                                     </div>
