--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -70,8 +70,11 @@
                                                             <div class="modal-footer">
                                                                 <form th:action="@{inpro/{inproId}/edit(inproId=${inpro.id})}" method="GET">
                                                                     <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>
-                                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                                 </form>
+                                                                <form th:action="@{inpro/{inproId}/delete(inproId=${inpro.id})}" th:method="DELETE">
+                                                                    <input class="btn btn-danger" type="submit" value="Delete" name='deleteButton'/>
+                                                                </form>
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </div>
                                                         </div>
                                                     </div>
