--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,10 +31,10 @@
                             <li role="presentation"><a th:href="@{/books}">Books</a></li>
                             <li role="presentation"><a th:href="@{/inpros}">Inproceedings</a></li>
                             <li role="presentation">
-                                <button type="button" name="searchButton" class="btn create-btn btn-sm" data-toggle="modal" data-target="#createTools">Create</button>
+                                <button type="button" name="createButton" class="btn create-btn btn-sm" data-toggle="modal" data-target="#createTools">Create</button>
                             </li>
                             <li role="presentation">
-                                <button type="button" name="createButton" class="btn search-btn btn-sm" data-toggle="modal" data-target="#searchTools">Search</button>
+                                <button type="button" name="searchButton" class="btn search-btn btn-sm" data-toggle="modal" data-target="#searchTools">Search</button>
                             </li>
                         </ul>
                     </div>
