--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,9 +66,9 @@
                         <br/>
                         <form th:action="@{/acm}" method="GET">
                             <div class="form-group">
-                                <input class="form-control"  type="text" name="queryACM" placeholder="Import from ACM Digital Library"/>
+                                <input class="form-control"  type="text" name="queryACM" placeholder="Import from ACM DL using id eg 2380613"/>
                             </div>
-                            <input class="btn btn-success btn-block" type="submit" value="Search" name="confirmSearchACM"/>
+                            <input class="btn btn-success btn-block" type="submit" value="Import" name="confirmSearchACM"/>
                         </form>
                     </div>
                     <div class="modal-footer">
